--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -35,6 +36,17 @@
       <span class="writeNew"><strong>Write</strong> a new tweet</p>
         <i class="fa-solid fa-angles-down"></i>
     </nav>
+
+    <!-- Header -->
+    <header>
+      <div class="profilePic">
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div class="profileName">
+          <h2>Elise <span class=lightFont>Schwarzer</span></h2>
+      </div>
+  </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
