Add character counter

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
   </head>
 
   <body>
@@ -56,7 +58,7 @@
         <h2>Compose Tweet</h2>
         <form action="/tweets" method="POST" id="submit-tweet"> 
           <label for="tweet-text" id="tweet-label">What are you humming about?</label>
-          <textarea name="text" id="tweet-text">I'm having a great day.</textarea>
+          <textarea name="text" id="tweet-text"></textarea>
           <div>
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
