--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,8 @@
           </div>
         </form>
       </section>
+      <section class="tweet" id="tweet-container">
+      </section>
     </main>
   </body>
 </html>
