Add box shadow & fixed text overflow

--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,12 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span class="logo">tweeter</span>
-      <span class="writeNew"><strong>Write</strong> a new tweet <i class="fa-solid fa-angles-down"></i></p>
+      <span class="writeNew"><strong>Write</strong> a new tweet <br><i class="fa-solid fa-angles-down"></i></p>
         
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="main-header">
       <div class="profilePic">
           <img src="/images/profile-hex.png"> 
       </div>
